--- a/Resources/css/index.css
+++ b/Resources/css/index.css
@@ -1,9 +1,14 @@
+
+
 .body{
-  font-family: Verdana, sans-serif;
-  text-align: center;
+
 }
 
 h1 {
+  font-family: Verdana, sans-serif;
+  text-align: center;
   font-weight: 600;
   font-size: 50px;
+  color: white;
+
 }
