added background-color to body

--- a/Resources/css/index.css
+++ b/Resources/css/index.css
@@ -1,6 +1,7 @@
-backround{
-  color: #fffff;
+.body{
+  backround-color: #fffff;
 }
+
 h1 {
   font-family: Verdana, sans-serif;
   text-align: center;
