--- a/Resources/css/index.css
+++ b/Resources/css/index.css
@@ -1,4 +1,4 @@
-body{
+.body{
   background-color: fffff;
 }
 
@@ -8,4 +8,9 @@ h1 {
   font-weight: 600;
   font-size: 50px;
   color: white;
+}
+
+.cta {
+  text-align: center;
+  color: aquamarine;
 }
