--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -16,6 +16,10 @@ h1 {
   color: white;
 }
 
+h2 {
+  font-family: Verdana, sans-serif;
+  font-size: 42px;
+}
 .cta {
   font-family: Verdana, sans-serif;
   text-align: center;
