--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -24,7 +24,7 @@ h2 {
 
 .cta {
   font-family: Verdana, sans-serif;
-  text-align: right;
+  text-align: center;
   font-size: 16px;
   color: aquamarine;
 }
@@ -34,4 +34,8 @@ h2 {
   font-size: 21px;
   font-family: verdana, sans-serif;
   text-align: center;
+}
+
+.footer {
+  text-align: right;
 }
