--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -24,7 +24,7 @@ h2 {
 
 .cta {
   font-family: Verdana, sans-serif;
-  text-align: left;
+  text-align: center;
   font-size: 16px;
   color: aquamarine;
 }
