--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -23,10 +23,11 @@ h2 {
   color: white;
 }
 
-.cta {
+#cta {
   font-family: Verdana, sans-serif;
   font-size: 16px;
   color: aquamarine;
+  text-align: center;
 }
 
 #copy {
